--- a/package.json
+++ b/package.json
@@ -2,13 +2,34 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@artsy/fresnel": "^7.1.4",
+    "@emailjs/browser": "^4.3.3",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
+    "gsap-trial": "^3.12.5",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.1",
+    "react-leaflet": "^4.2.1",
+    "react-loaders": "^3.0.1",
+    "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
+    "sass": "^1.72.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
